# -*- coding: utf-8; tab-width: 4; -*-
# ex: set fileencoding=utf-8 softtabstop=4 tabstop=4 expandtab:

2013-12-03 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add cloudi_service:timeout_max/1 and cloudi:timeout_max/1 functions
    * Update edoc documentation

2013-12-02 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add the TIMEOUT_MAX constant and the TIMEOUT_MAX_ERLANG constant
      with configuration validation usage
    * Add the response_timeout_immediate_max service configuration option

2013-11-30 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix ProcessCount and ThreadCount when greater than 1.0 so that it
      uses ceil (previously it was sometimes ceil+1)
    * Add done return value for cloudi_service_map_reduce
      cloudi_service_map_reduce_send/2 so that having more workers than
      work does not cause extra processing
    * Terminate the cloudi_service_map_reduce service after all
      requests have successfully returned

2013-11-29 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Fix timer usage within internal services, during the
      cloudi_service_init/3 function execution

2013-11-28 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add backward-cpp integration alongside booster/backtrace.h for
      providing the execution backtrace from the C++ CloudI API
    * Make CloudI::API::backtrace() functionality require enabling
      with configure (--with-cxx-backtrace)
    * No longer catch non-std::exception types within the C/C++ CloudI API
      (now the service will terminate with abort() after outputting a
       backtrace, if possible)
    * Add boost::exception integration to provide more information after the
      abnormal termination of a C++ CloudI API service request

2013-11-27 Michael Truog   <mjtruog [at] gmail (dot) com>

    * Add booster/backtrace.h usage to the C/C++ CloudI API

2013-11-21 Michael Truog   <mjtruog [at] gmail (dot) com>
